tests/ui/imports/redundant-import-issue-121915-2015.stderr
error: the item `aux_issue_121915` is already exists in the extern prelude
  --> $DIR/redundant-import-issue-121915-2015.rs:8:9
   |
LL |     use aux_issue_121915;
   |     ----^^^^^^^^^^^^^^^^- help: remove this import
   |
note: the lint level is defined here
  --> $DIR/redundant-import-issue-121915-2015.rs:6:8
   |
LL | #[deny(unused_imports)]
   |        ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

